crates/pg_syntax/tests/snapshots/postgres_regress/join@203.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: insert into xx values (2);
---
InsertStmt@0..26
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "xx"
  Whitespace@14..15 " "
  SelectStmt@15..24
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..24
      AConst@23..24
        Iconst@23..24 "2"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

