crates/pg_syntax/tests/snapshots/postgres_regress/join@205.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into yy values (101, 1);"
---
InsertStmt@0..31
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "yy"
  Whitespace@14..15 " "
  SelectStmt@15..29
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..29
      AConst@23..26
        Iconst@23..26 "101"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..29
        Iconst@28..29 "1"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

