crates/pg_syntax/tests/snapshots/postgres_regress/join@207.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into yy values (301, NULL);"
---
InsertStmt@0..34
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "yy"
  Whitespace@14..15 " "
  SelectStmt@15..32
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..32
      AConst@23..26
        Iconst@23..26 "301"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..32
        NullP@28..32 "NULL"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

