crates/pg_syntax/tests/snapshots/postgres_regress/join@208.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select yy.pkyy as yy_pkyy, yy.pkxx as yy_pkxx, yya.pkyy as yya_pkyy,\n       xxa.pkxx as xxa_pkxx, xxb.pkxx as xxb_pkxx\nfrom yy\n     left join (SELECT * FROM yy where pkyy = 101) as yya ON yy.pkyy = yya.pkyy\n     left join xx xxa on yya.pkxx = xxa.pkxx\n     left join xx xxb on coalesce (xxa.pkxx, 1) = xxb.pkxx;"
---
SelectStmt@0..311
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..25
    ColumnRef@7..14
      Ident@7..9 "yy"
      Ascii46@9..10 "."
      Ident@10..14 "pkyy"
    Whitespace@14..15 " "
    As@15..17 "as"
    Whitespace@17..18 " "
    Ident@18..25 "yy_pkyy"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..45
    ColumnRef@27..34
      Ident@27..29 "yy"
      Ascii46@29..30 "."
      Ident@30..34 "pkxx"
    Whitespace@34..35 " "
    As@35..37 "as"
    Whitespace@37..38 " "
    Ident@38..45 "yy_pkxx"
  Ascii44@45..46 ","
  Whitespace@46..47 " "
  ResTarget@47..67
    ColumnRef@47..55
      Ident@47..50 "yya"
      Ascii46@50..51 "."
      Ident@51..55 "pkyy"
    Whitespace@55..56 " "
    As@56..58 "as"
    Whitespace@58..59 " "
    Ident@59..67 "yya_pkyy"
  Ascii44@67..68 ","
  Newline@68..69 "\n"
  Whitespace@69..76 "       "
  ResTarget@76..96
    ColumnRef@76..84
      Ident@76..79 "xxa"
      Ascii46@79..80 "."
      Ident@80..84 "pkxx"
    Whitespace@84..85 " "
    As@85..87 "as"
    Whitespace@87..88 " "
    Ident@88..96 "xxa_pkxx"
  Ascii44@96..97 ","
  Whitespace@97..98 " "
  ResTarget@98..118
    ColumnRef@98..106
      Ident@98..101 "xxb"
      Ascii46@101..102 "."
      Ident@102..106 "pkxx"
    Whitespace@106..107 " "
    As@107..109 "as"
    Whitespace@109..110 " "
    Ident@110..118 "xxb_pkxx"
  Newline@118..119 "\n"
  From@119..123 "from"
  Whitespace@123..124 " "
  JoinExpr@124..310
    JoinExpr@124..251
      JoinExpr@124..206
        RangeVar@124..126
          Ident@124..126 "yy"
        Newline@126..127 "\n"
        Whitespace@127..132 "     "
        Left@132..136 "left"
        Whitespace@136..137 " "
        Join@137..141 "join"
        Whitespace@141..142 " "
        Ascii40@142..143 "("
        RangeSubselect@143..184
          SelectStmt@143..176
            Select@143..149 "SELECT"
            Whitespace@149..150 " "
            ResTarget@150..151
              ColumnRef@150..151
                AStar@150..151
                  Ascii42@150..151 "*"
            Whitespace@151..152 " "
            From@152..156 "FROM"
            Whitespace@156..157 " "
            RangeVar@157..159
              Ident@157..159 "yy"
            Whitespace@159..160 " "
            Where@160..165 "where"
            Whitespace@165..166 " "
            AExpr@166..176
              ColumnRef@166..170
                Ident@166..170 "pkyy"
              Whitespace@170..171 " "
              Ascii61@171..172 "="
              Whitespace@172..173 " "
              AConst@173..176
                Iconst@173..176 "101"
          Ascii41@176..177 ")"
          Whitespace@177..178 " "
          Alias@178..184
            As@178..180 "as"
            Whitespace@180..181 " "
            Ident@181..184 "yya"
        Whitespace@184..185 " "
        On@185..187 "ON"
        Whitespace@187..188 " "
        AExpr@188..206
          ColumnRef@188..195
            Ident@188..190 "yy"
            Ascii46@190..191 "."
            Ident@191..195 "pkyy"
          Whitespace@195..196 " "
          Ascii61@196..197 "="
          Whitespace@197..198 " "
          ColumnRef@198..206
            Ident@198..201 "yya"
            Ascii46@201..202 "."
            Ident@202..206 "pkyy"
      Newline@206..207 "\n"
      Whitespace@207..212 "     "
      Left@212..216 "left"
      Whitespace@216..217 " "
      Join@217..221 "join"
      Whitespace@221..222 " "
      RangeVar@222..228
        Ident@222..224 "xx"
        Whitespace@224..225 " "
        Alias@225..228
          Ident@225..228 "xxa"
      Whitespace@228..229 " "
      On@229..231 "on"
      Whitespace@231..232 " "
      AExpr@232..251
        ColumnRef@232..240
          Ident@232..235 "yya"
          Ascii46@235..236 "."
          Ident@236..240 "pkxx"
        Whitespace@240..241 " "
        Ascii61@241..242 "="
        Whitespace@242..243 " "
        ColumnRef@243..251
          Ident@243..246 "xxa"
          Ascii46@246..247 "."
          Ident@247..251 "pkxx"
    Newline@251..252 "\n"
    Whitespace@252..257 "     "
    Left@257..261 "left"
    Whitespace@261..262 " "
    Join@262..266 "join"
    Whitespace@266..267 " "
    RangeVar@267..273
      Ident@267..269 "xx"
      Whitespace@269..270 " "
      Alias@270..273
        Ident@270..273 "xxb"
    Whitespace@273..274 " "
    On@274..276 "on"
    Whitespace@276..277 " "
    AExpr@277..310
      CoalesceExpr@277..298
        Coalesce@277..285 "coalesce"
        Whitespace@285..286 " "
        Ascii40@286..287 "("
        ColumnRef@287..295
          Ident@287..290 "xxa"
          Ascii46@290..291 "."
          Ident@291..295 "pkxx"
        Ascii44@295..296 ","
        Whitespace@296..297 " "
        AConst@297..298
          Iconst@297..298 "1"
      Ascii41@298..299 ")"
      Whitespace@299..300 " "
      Ascii61@300..301 "="
      Whitespace@301..302 " "
      ColumnRef@302..310
        Ident@302..305 "xxb"
        Ascii46@305..306 "."
        Ident@306..310 "pkxx"
  Ascii59@310..311 ";"

