crates/pg_syntax/tests/snapshots/postgres_regress/join@212.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: insert into zt1 values(53);
---
InsertStmt@0..27
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "zt1"
  Whitespace@15..16 " "
  SelectStmt@16..25
    Values@16..22 "values"
    Ascii40@22..23 "("
    List@23..25
      AConst@23..25
        Iconst@23..25 "53"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

